chore: 💄 base `ns` shader config screen items

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -16,8 +16,17 @@ shadow.culling=true
 underwaterOverlay=false
 vignette=false
 
+################
+
 #Screen Setup
-screen=<empty> <empty> <profile> ABOUT <empty> <empty> [LIGHTING] [MATERIAL] [ATMOSPHERICS] [WATER] [CAMERA] [ANTIALIASING] [COLOR] [CGT] [EXTRAS] [ANIMATION]
+
+screen.columns=3
+screen=\
+ABOUT <profile> [NS] \
+<empty> <empty> <empty> \
+[LIGHTING] [MATERIAL] [ATMOSPHERICS] [WATER] [CAMERA] [ANTIALIASING] [COLOR] [CGT] [ANIMATION] [EXTRAS]
+
+################
 
 screen.LIGHTING=<empty> <empty> shadowMapResolution shadowDistance SHADOW_COLOR SHADOW_FILTER sunPathRotation [SHADOW] <empty> <empty> AO AO_STRENGTH DESATURATION DESATURATION_FACTOR DYNAMIC_HANDLIGHT WHITE_WORLD
 screen.SHADOW=<empty> <empty> SHADOW_ENTITY SHADOW_BLOCK_ENTITY SHADOW_VEGETATION SHADOW_PIXEL
@@ -189,3 +198,11 @@ shadowEntities=false
 #ifndef SHADOW_BLOCK_ENTITY
 shadowBlockEntities=false
 #endif
+
+################
+
+# BSL-NS
+
+screen.NS.columns=2
+screen.NS=\
+<empty> <empty> \
