feat(`glsl`): 🔨 smoothed world info uniforms
day phase, temp, humid

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -206,3 +206,21 @@ shadowBlockEntities=false
 screen.NS.columns=2
 screen.NS=\
 <empty> <empty> \
+
+# x: + = am , - = pm
+# y: + = day, - = night
+#
+# It is smoothed out worldTime on a vec2 uniform, the benefits are...
+# - Animations based on it are no longer locked at 20 fps.
+# - Minimal float precision loss.
+# - Easy seamless wiggle loop (passing it onto a noise map).
+# - A cool little time stop effect on pausing!
+#
+# Multiply it by 400 if you want to replace `worldTime` with it.
+uniform.vec2.nsDayPhase=vec2( \
+    smooth(cos(worldTime / 12000 * pi), 1.2, 1.2), \
+    smooth(sin(worldTime / 12000 * pi), 1.2, 1.2) \
+)
+
+uniform.float.nsSmoothedTemperature=smooth(temperature, 30, 30)
+uniform.float.nsSmoothedRainfall=smooth(rainfall, 30, 30)
