--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -27,7 +27,8 @@
 #  300 - Water
 #  301 - Glass
 #  302 - Translucents
-#  303 - Modded Water
+#  303 - Portal
+#  304 - Modded Water
 
 #Misc.
 #  400 - Sign
@@ -64,7 +65,8 @@ minecraft:oak_sapling minecraft:spruce_sapling minecraft:birch_sapling minecraft
 minecraft:dead_bush minecraft:sugar_cane minecraft:red_mushroom minecraft:brown_mushroom minecraft:cobweb minecraft:nether_wart minecraft:crimson_fungus minecraft:warped_fungus
 
 block.10200= \
-minecraft:redstone_wire minecraft:repeater:powered=true minecraft:comparator:powered=true \
+minecraft:redstone_wire:power=1 minecraft:redstone_wire:power=2 minecraft:redstone_wire:power=3 minecraft:redstone_wire:power=4 minecraft:redstone_wire:power=5 minecraft:redstone_wire:power=6 minecraft:redstone_wire:power=7 minecraft:redstone_wire:power=8 minecraft:redstone_wire:power=9 minecraft:redstone_wire:power=10 minecraft:redstone_wire:power=11 minecraft:redstone_wire:power=12 minecraft:redstone_wire:power=13 minecraft:redstone_wire:power=14 minecraft:redstone_wire:power=15 \
+minecraft:repeater:powered=true minecraft:comparator:powered=true \
 minecraft:redstone_torch:lit=true minecraft:redstone_wall_torch:lit=true \
 minecraft:soul_torch minecraft:soul_wall_torch minecraft:soul_campfire:lit=true \
 minecraft:torch minecraft:wall_torch minecraft:end_rod \
@@ -97,7 +99,9 @@ minecraft:water minecraft:flowing_water
 block.10301= \
 minecraft:white_stained_glass minecraft:orange_stained_glass minecraft:magenta_stained_glass minecraft:light_blue_stained_glass minecraft:yellow_stained_glass minecraft:lime_stained_glass minecraft:pink_stained_glass minecraft:gray_stained_glass minecraft:light_gray_stained_glass minecraft:cyan_stained_glass minecraft:purple_stained_glass minecraft:blue_stained_glass minecraft:brown_stained_glass minecraft:green_stained_glass minecraft:red_stained_glass minecraft:black_stained_glass minecraft:white_stained_glass_pane minecraft:orange_stained_glass_pane minecraft:magenta_stained_glass_pane minecraft:light_blue_stained_glass_pane minecraft:yellow_stained_glass_pane minecraft:lime_stained_glass_pane minecraft:pink_stained_glass_pane minecraft:gray_stained_glass_pane minecraft:light_gray_stained_glass_pane minecraft:cyan_stained_glass_pane minecraft:purple_stained_glass_pane minecraft:blue_stained_glass_pane minecraft:brown_stained_glass_pane minecraft:green_stained_glass_pane minecraft:red_stained_glass_pane minecraft:black_stained_glass_pane minecraft:glass minecraft:glass_pane 
 block.10302= \
-minecraft:ice minecraft:nether_portal minecraft:slime_block minecraft:honey_block 
+minecraft:ice minecraft:slime_block minecraft:honey_block 
+block.10303= \
+minecraft:nether_portal
 
 block.10400= \
 minecraft:sign minecraft:oak_sign minecraft:spruce_sign minecraft:birch_sign minecraft:jungle_sign minecraft:acacia_sign minecraft:dark_oak_sign minecraft:wall_sign minecraft:oak_wall_sign minecraft:spruce_wall_sign minecraft:birch_wall_sign minecraft:jungle_wall_sign minecraft:acacia_wall_sign minecraft:dark_oak_wall_sign
@@ -151,7 +155,9 @@ minecraft:water minecraft:flowing_water
 block.10301= \
 minecraft:stained_glass minecraft:stained_glass_pane minecraft:glass minecraft:glass_pane 
 block.10302= \
-minecraft:ice minecraft:portal minecraft:slime
+minecraft:ice minecraft:slime
+block.10303= \
+minecraft:nether_portal
 
 block.10400= \
 minecraft:sign minecraft:wall_sign
