--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -19,21 +19,22 @@ vignette=false
 #Screen Setup
 screen=<empty> <empty> <profile> ABOUT <empty> <empty> [LIGHTING] [MATERIAL] [ATMOSPHERICS] [WATER] [CAMERA] [ANTIALIASING] [COLOR] [CGT] [EXTRAS] [ANIMATION]
 
-screen.LIGHTING=<empty> <empty> shadowMapResolution shadowDistance SHADOW_COLOR SHADOW_FILTER sunPathRotation [SHADOW] <empty> <empty> AO AO_STRENGTH DESATURATION DESATURATION_FACTOR DYNAMIC_HANDLIGHT WHITE_WORLD
+screen.LIGHTING=<empty> <empty> shadowMapResolution shadowDistance SHADOW_COLOR SHADOW_FILTER sunPathRotation [SHADOW] <empty> <empty> AO AO_STRENGTH DESATURATION DESATURATION_FACTOR DYNAMIC_HANDLIGHT MULTICOLORED_BLOCKLIGHT WHITE_WORLD
 screen.SHADOW=<empty> <empty> SHADOW_ENTITY SHADOW_BLOCK_ENTITY SHADOW_VEGETATION SHADOW_PIXEL
 
 screen.MATERIAL=<empty> <empty> ADVANCED_MATERIALS MATERIAL_FORMAT <empty> <empty> [SPECULAR] [NORMALS] <empty> <empty> SSS BASIC_SSS EMISSIVE REFRACTION ALBEDO_BALANCING ALPHA_BLEND ENTITY_FLASH
 screen.SPECULAR=<empty> <empty> REFLECTION REFLECTION_TRANSLUCENT <empty> <empty> REFLECTION_SPECULAR REFLECTION_RAIN REFLECTION_ROUGH REFLECTION_PREVIOUS SPECULAR_HIGHLIGHT_ROUGH ALBEDO_METAL REFLECTION_MODE REFLECTION_SKY_FALLOFF
 screen.NORMALS=<empty> <empty> PARALLAX PARALLAX_DEPTH PARALLAX_QUALITY PARALLAX_DISTANCE SELF_SHADOW SELF_SHADOW_ANGLE SELF_SHADOW_QUALITY SELF_SHADOW_STRENGTH <empty> <empty> DIRECTIONAL_LIGHTMAP DIRECTIONAL_LIGHTMAP_STRENGTH NORMAL_DAMPENING NORMAL_PLANTS
 
-screen.ATMOSPHERICS=<empty> <empty> CLOUDS [CLOUDS] SKY_DESATURATION [SKY]  <empty> <empty> AURORA ROUND_SUN_MOON DISTANT_FADE DISTANT_FADE_STYLE WEATHER_PERBIOME UNDERGROUND_SKY LIGHT_SHAFT LIGHT_SHAFT_STRENGTH FOG_DENSITY WEATHER_OPACITY
+screen.ATMOSPHERICS=<empty> <empty> CLOUDS [CLOUDS] SKY_DESATURATION [SKY] <empty> <empty> AURORA ROUND_SUN_MOON DISTANT_FADE DISTANT_FADE_STYLE WEATHER_PERBIOME UNDERGROUND_SKY LIGHT_SHAFT LIGHT_SHAFT_STRENGTH FOG_DENSITY WEATHER_OPACITY
 screen.SKY=<empty> <empty> SKY_DENSITY_D SKY_EXPOSURE_D SKY_DENSITY_N SKY_EXPOSURE_N SKY_DENSITY_W SKY_EXPOSURE_W SKY_HORIZON_N SKY_HORIZON_F <empty> <empty> SKY_GROUND SKYBOX_BRIGHTNESS
 screen.CLOUDS=<empty> <empty> CLOUD_BASE CLOUD_DENSITY CLOUD_AMOUNT CLOUD_HEIGHT CLOUD_THICKNESS CLOUD_DETAIL CLOUD_SPEED CLOUD_OPACITY CLOUD_BRIGHTNESS
 
 screen.WATER=<empty> <empty> WATER_MODE WATER_ALPHA_MODE WATER_NORMALS WATER_PARALLAX WATER_SHADOW_COLOR WATER_CAUSTICS <empty> <empty> WATER_DETAIL WATER_SHARPNESS WATER_BUMP WATER_SPEED WATER_FOG WATER_FOG_DENSITY WATER_CAUSTICS_STRENGTH WATER_PIXEL
 
 screen.CAMERA=<empty> <empty> DOF DOF_STRENGTH MOTION_BLUR MOTION_BLUR_STRENGTH BLOOM BLOOM_STRENGTH BLOOM_CONTRAST BLOOM_RADIUS LENS_FLARE LENS_FLARE_STRENGTH VIGNETTE VIGNETTE_STRENGTH DIRTY_LENS CHROMATIC_ABERRATION UNDERWATER_DISTORTION
-screen.ANTIALIASING=<empty> <empty> FXAA TAA <empty> <empty> FXAA_SUBPIXEL FXAA_EDGE_SENSITIVITY
+
+screen.ANTIALIASING=<empty> <empty> FXAA TAA <empty> <empty> FXAA_SUBPIXEL FXAA_EDGE_SENSITIVITY <empty> <empty> TAA_SELECTIVE
 
 screen.COLOR=<empty> <empty> [LIGHT_COLOR] [BLOCKLIGHT_COLOR] [SKY_COLOR] [WATER_COLOR] [WEATHER_COLOR] [AURORA_COLOR] [NETHER_COLOR] [END_COLOR]
 screen.LIGHT_COLOR=<empty> <empty> [LIGHT_M] [AMBIENT_M] [LIGHT_D] [AMBIENT_D] [LIGHT_E] [AMBIENT_E] [LIGHT_N] [AMBIENT_N] [MINLIGHT]
