feat(`glsl`): 🔨 improved day phase uniform
Added z, representing smoothed ticks.

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -208,19 +208,18 @@ screen.NS.columns=2
 screen.NS=\
 <empty> <empty> \
 
-# x: + = am , - = pm
-# y: + = day, - = night
+# xy: sun vector (circular)
+# z: time in seconds
 #
-# It is smoothed out worldTime on a vec2 uniform, the benefits are...
-# - Animations based on it are no longer locked at 20 fps.
-# - Minimal float precision loss.
-# - Easy seamless wiggle loop (passing it onto a noise map).
+# With this vec3, the following things are easily doable...
+# - 60 FPS world time animation.
+# - Seamless wiggle loop (passing xy onto a noise map, times 190.9859 if a 1:1 scale between xy and z is needed).
 # - A cool little time stop effect on pausing!
-#
-# Multiply it by 400 if you want to replace `worldTime` with it.
-uniform.vec2.nsDayPhase=vec2( \
-    smooth(cos(worldTime / 12000 * pi), 1.2, 1.2), \
-    smooth(sin(worldTime / 12000 * pi), 1.2, 1.2) \
+# With one drawback: To prevent precision loss, Z resets every 30 in-game days, smoothing causes a brief rewind effect.
+uniform.vec3.nsDayPhase=vec3( \
+    smooth(cos(sunAngle * 2 * pi), 0.8, 0.8), \
+    smooth(sin(sunAngle * 2 * pi), 0.8, 0.8), \
+    smooth((worldDay * 1200 + worldTime / 20) % 36000, 0.8, 0.8) \
 )
 
 uniform.float.nsSmoothedTemperature=smooth(temperature, 30, 30)
