chore: 💄 ca world time - `ns` screen items

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -213,6 +213,7 @@ NS_CA_ENABLED [NS_CA] \
 
 screen.NS_CA.columns=2
 screen.NS_CA=\
+WORLD_TIME_ANIMATION NS_CA_WORLD_TIME_ENABLED \
 NS_CA_ALTITUDE_WEIGHT NS_CA_INDOOR_WEIGHT \
 NS_CA_RAINFALL_WEIGHT NS_CA_TEMPERATURE_WEIGHT \
 NS_CA_WEATHER_WEIGHT
