chore: 💄 sky toggles - `ns` screen items

--- a/shaders/shaders.properties
+++ b/shaders/shaders.properties
@@ -207,6 +207,11 @@ shadowBlockEntities=false
 screen.NS.columns=2
 screen.NS=\
 <empty> <empty> \
+[NS_SKY]
+
+screen.NS_SKY.columns=2
+screen.NS_SKY=\
+NS_CREPUSCULAR_SKY_ENABLED NS_MOON_PHASE_STARS_ENABLED
 
 # xy: sun vector (circular)
 # z: time in seconds
