refactor(`glsl`): 🔨 more block ids

--- a/shaders/block.properties
+++ b/shaders/block.properties
@@ -64,6 +64,15 @@ block.10109= \
 minecraft:oak_sapling minecraft:spruce_sapling minecraft:birch_sapling minecraft:jungle_sapling minecraft:acacia_sapling minecraft:dark_oak_sapling \
 minecraft:dead_bush minecraft:sugar_cane minecraft:red_mushroom minecraft:brown_mushroom minecraft:cobweb minecraft:nether_wart minecraft:crimson_fungus minecraft:warped_fungus
 
+# BSL-NS
+
+# Blocks with Collision
+block.10185=oak_leaves spruce_leaves birch_leaves jungle_leaves acacia_leaves dark_oak_leaves azalea_leaves flowering_azalea_leaves mangrove_leaves
+block.10187=azalea flowering_azalea big_dripleaf
+block.10188=lily_pad
+
+################
+
 block.10200= \
 minecraft:redstone_wire:power=1 minecraft:redstone_wire:power=2 minecraft:redstone_wire:power=3 minecraft:redstone_wire:power=4 minecraft:redstone_wire:power=5 minecraft:redstone_wire:power=6 minecraft:redstone_wire:power=7 minecraft:redstone_wire:power=8 minecraft:redstone_wire:power=9 minecraft:redstone_wire:power=10 minecraft:redstone_wire:power=11 minecraft:redstone_wire:power=12 minecraft:redstone_wire:power=13 minecraft:redstone_wire:power=14 minecraft:redstone_wire:power=15 \
 minecraft:repeater:powered=true minecraft:comparator:powered=true \
@@ -94,6 +103,18 @@ minecraft:cave_vines_plant:berries=true minecraft:cave_vines:berries=true
 block.10208= \
 minecraft:candle:lit=true minecraft:white_candle:lit=true minecraft:orange_candle:lit=true minecraft:magenta_candle:lit=true minecraft:light_blue_candle:lit=true minecraft:yellow_candle:lit=true minecraft:lime_candle:lit=true minecraft:pink_candle:lit=true minecraft:gray_candle:lit=true minecraft:light_gray_candle:lit=true minecraft:cyan_candle:lit=true minecraft:purple_candle:lit=true minecraft:blue_candle:lit=true minecraft:brown_candle:lit=true minecraft:green_candle:lit=true minecraft:red_candle:lit=true minecraft:black_candle:lit=true
 
+# BSL-NS
+
+# Blocks with Collision
+block.10280=repeater:powered=true comparator:powered=true soul_campfire:lit=true end_rod jack_o_lantern campfire:lit=true sea_pickle small_amethyst_bud medium_amethyst_bud large_amethyst_bud amethyst_cluster ochre_froglight verdant_froglight pearlescent_froglight sculk sculk_sensor sculk_catalyst sculk_shrieker
+block.10281=glowstone shroomlight redstone_lamp:lit=true sea_lantern lantern:hanging=false magma_block soul_lantern:hanging=false
+block.10282=furnace:lit=true blast_furnace:lit=true smoker:lit=true
+block.10285=beacon
+block.10286=lantern:hanging=true soul_lantern:hanging=true
+block.10288=candle:lit=true white_candle:lit=true orange_candle:lit=true magenta_candle:lit=true light_blue_candle:lit=true yellow_candle:lit=true lime_candle:lit=true pink_candle:lit=true gray_candle:lit=true light_gray_candle:lit=true cyan_candle:lit=true purple_candle:lit=true blue_candle:lit=true brown_candle:lit=true green_candle:lit=true red_candle:lit=true black_candle:lit=true
+
+################
+
 block.10300= \
 minecraft:water minecraft:flowing_water
 block.10301= \
@@ -102,6 +123,14 @@ block.10302= \
 minecraft:ice minecraft:slime_block minecraft:honey_block 
 block.10303= \
 minecraft:nether_portal
+
+# BSL-NS
+
+# Blocks with Collision
+block.10381=white_stained_glass orange_stained_glass magenta_stained_glass light_blue_stained_glass yellow_stained_glass lime_stained_glass pink_stained_glass gray_stained_glass light_gray_stained_glass cyan_stained_glass purple_stained_glass blue_stained_glass brown_stained_glass green_stained_glass red_stained_glass black_stained_glass white_stained_glass_pane orange_stained_glass_pane magenta_stained_glass_pane light_blue_stained_glass_pane yellow_stained_glass_pane lime_stained_glass_pane pink_stained_glass_pane gray_stained_glass_pane light_gray_stained_glass_pane cyan_stained_glass_pane purple_stained_glass_pane blue_stained_glass_pane brown_stained_glass_pane green_stained_glass_pane red_stained_glass_pane black_stained_glass_pane glass glass_pane
+block.10382=ice slime_block honey_block
+
+################
 
 block.10400= \
 minecraft:sign minecraft:oak_sign minecraft:spruce_sign minecraft:birch_sign minecraft:jungle_sign minecraft:acacia_sign minecraft:dark_oak_sign minecraft:wall_sign minecraft:oak_wall_sign minecraft:spruce_wall_sign minecraft:birch_wall_sign minecraft:jungle_wall_sign minecraft:acacia_wall_sign minecraft:dark_oak_wall_sign
